// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlighted-element 1`] = `
<div
  className="Schema-element highlighted undefined"
  onClick={[Function]}
>
  Highlighted_element
</div>
`;

exports[`mapped-element 1`] = `
<div
  className="Schema-element mapped undefined"
  onClick={[Function]}
>
  Mapped_element
</div>
`;

exports[`single-element 1`] = `
<div
  className="Schema-element undefined"
  onClick={[Function]}
>
  Single_element
</div>
`;
